# wasm4-unknown-car-game

./: .editorconfig  .gitignore  Cargo.toml  Justfile  README.md  index.html
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml
src/: game.rs  lib.rs
