[package]
name = "cart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
# wasm4-sx = { git = "https://github.com/Srynetix/wasm4-sx.git" }
wasm4-sx = { path = "../wasm4-sx/wasm4-sx" }

[dev-dependencies]
wasm4-stubs = { git = "https://github.com/Srynetix/wasm4-sx.git" }

[profile.release]
opt-level = "z"
lto = true
