[package]
name = "cart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm4-sx = { git = "https://github.com/Srynetix/wasm4-sx.git", rev = "7923240a6c8e38cd7f34f3ec74e46bd0874da503" }

[dev-dependencies]
wasm4-stubs = { git = "https://github.com/Srynetix/wasm4-sx.git", rev = "7923240a6c8e38cd7f34f3ec74e46bd0874da503" }

[profile.release]
opt-level = "z"
lto = true
